[gd_scene load_steps=2 format=3 uid="uid://di3tn0h6wnuuy"]

[ext_resource type="Script" uid="uid://dla8ubkljp7ii" path="res://scenes/ui/menus/options_menu/options_menu.gd" id="1_if1rp"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_if1rp")

[node name="Options" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -68.0
offset_right = 60.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="Options"]
layout_mode = 2
text = "Video Settings"

[node name="Audio" type="Button" parent="Options"]
layout_mode = 2
text = "Audio Settings"

[node name="Controls" type="Button" parent="Options"]
layout_mode = 2
text = "Controls"

[node name="Save" type="Button" parent="Options"]
layout_mode = 2
text = "Apply + Save"

[node name="Back" type="Button" parent="Options"]
layout_mode = 2
text = "Back"

[node name="Video" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.5
offset_top = -42.5
offset_right = 160.5
offset_bottom = 42.5
grow_horizontal = 2
grow_vertical = 2

[node name="FPSLimit" type="HBoxContainer" parent="Video"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Scrollbox" type="HBoxContainer" parent="Video/FPSLimit"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Label" type="Label" parent="Video/FPSLimit/Scrollbox"]
layout_mode = 2
text = "FPS Limit"

[node name="Scrollbar" type="HScrollBar" parent="Video/FPSLimit/Scrollbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
max_value = 400.0
step = 10.0

[node name="ValueLabel" type="Label" parent="Video/FPSLimit"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
size_flags_horizontal = 10
text = "0"

[node name="Brightness" type="HBoxContainer" parent="Video"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Scrollbox" type="HBoxContainer" parent="Video/Brightness"]
layout_mode = 2

[node name="Label" type="Label" parent="Video/Brightness/Scrollbox"]
layout_mode = 2
text = "Brightness"

[node name="Scrollbar" type="HScrollBar" parent="Video/Brightness/Scrollbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
step = 5.0

[node name="ValueLabel" type="Label" parent="Video/Brightness"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "0"

[node name="Back" type="Button" parent="Video"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="Audio" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolume" type="HBoxContainer" parent="Audio"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Scrollbox" type="HBoxContainer" parent="Audio/MasterVolume"]
layout_mode = 2

[node name="Label" type="Label" parent="Audio/MasterVolume/Scrollbox"]
layout_mode = 2
text = "Master Volume"

[node name="ScrollBar" type="HScrollBar" parent="Audio/MasterVolume/Scrollbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="ValueLabel" type="Label" parent="Audio/MasterVolume"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "0"

[node name="MusicVolume" type="HBoxContainer" parent="Audio"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Scrollbox" type="HBoxContainer" parent="Audio/MusicVolume"]
layout_mode = 2

[node name="Label" type="Label" parent="Audio/MusicVolume/Scrollbox"]
layout_mode = 2
text = "Music  Volume"

[node name="ScrollBar" type="HScrollBar" parent="Audio/MusicVolume/Scrollbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="ValueLabel" type="Label" parent="Audio/MusicVolume"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "0"

[node name="MenuMusicVolume" type="HBoxContainer" parent="Audio"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Scrollbox" type="HBoxContainer" parent="Audio/MenuMusicVolume"]
layout_mode = 2

[node name="Label" type="Label" parent="Audio/MenuMusicVolume/Scrollbox"]
layout_mode = 2
text = "Menu Music Vol."

[node name="ScrollBar" type="HScrollBar" parent="Audio/MenuMusicVolume/Scrollbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="ValueLabel" type="Label" parent="Audio/MenuMusicVolume"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "0"

[node name="SFXVolume" type="HBoxContainer" parent="Audio"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Scrollbox" type="HBoxContainer" parent="Audio/SFXVolume"]
layout_mode = 2

[node name="Label" type="Label" parent="Audio/SFXVolume/Scrollbox"]
layout_mode = 2
text = "SFX Volume"

[node name="ScrollBar" type="HScrollBar" parent="Audio/SFXVolume/Scrollbox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="ValueLabel" type="Label" parent="Audio/SFXVolume"]
custom_minimum_size = Vector2(28, 0)
layout_mode = 2
text = "0"

[node name="Back" type="Button" parent="Audio"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="Controls" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="Controls"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="Options/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Options/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Options/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Options/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Options/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Video/FPSLimit/Scrollbox/Scrollbar" to="." method="_on_fps_limit_value_changed"]
[connection signal="value_changed" from="Video/Brightness/Scrollbox/Scrollbar" to="." method="_on_brightness_value_changed"]
[connection signal="pressed" from="Video/Back" to="." method="_on_child_back_pressed"]
[connection signal="value_changed" from="Audio/MasterVolume/Scrollbox/ScrollBar" to="." method="_on_master_volume_value_changed"]
[connection signal="value_changed" from="Audio/MusicVolume/Scrollbox/ScrollBar" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Audio/MenuMusicVolume/Scrollbox/ScrollBar" to="." method="_on_menu_music_volume_value_changed"]
[connection signal="value_changed" from="Audio/SFXVolume/Scrollbox/ScrollBar" to="." method="_on_sfx_volume_value_changed"]
[connection signal="pressed" from="Audio/Back" to="." method="_on_child_back_pressed"]
[connection signal="pressed" from="Controls/Back" to="." method="_on_child_back_pressed"]
